--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo unicornio.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/logorizosfelices.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Unicornio</title>
+    <title>Rizo Tipo</title>
   </head>
   <body>
     <div id="root"></div>
